--- a/start/package.json
+++ b/start/package.json
@@ -16,6 +16,8 @@
     "webpack": "^2.5.1"
   },
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
